// <auto-generated />
using System;
using FSADProjectBackend.Contexts;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace FSADProjectBackend.Migrations
{
    [DbContext(typeof(PgDbContext))]
    [Migration("20251130055901_AddContactsAndMissingField")]
    partial class AddContactsAndMissingField
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "9.0.9")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("FSADProjectBackend.Models.Contact", b =>
                {
                    b.Property<string>("ProblemSolverId")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.Property<string>("Address")
                        .HasColumnType("text");

                    b.Property<string>("Email")
                        .HasColumnType("text");

                    b.Property<string>("Facebook")
                        .HasColumnType("text");

                    b.Property<string>("Instagram")
                        .HasColumnType("text");

                    b.Property<string>("LinkedIn")
                        .HasColumnType("text");

                    b.Property<string>("Phone")
                        .HasColumnType("text");

                    b.Property<string>("Twitter")
                        .HasColumnType("text");

                    b.Property<string>("Website")
                        .HasColumnType("text");

                    b.HasKey("ProblemSolverId");

                    b.ToTable("Contacts");
                });

            modelBuilder.Entity("FSADProjectBackend.Models.ProblemSolver", b =>
                {
                    b.Property<string>("Id")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.Property<string>("ContactId")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasMaxLength(2048)
                        .HasColumnType("character varying(2048)");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.Property<string>("ProfilePic")
                        .IsRequired()
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.HasKey("Id");

                    b.ToTable("ProblemSolvers");
                });

            modelBuilder.Entity("FSADProjectBackend.Models.ProblemTagMapping", b =>
                {
                    b.Property<string>("TagId")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.Property<string>("ProblemId")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.HasKey("TagId", "ProblemId");

                    b.ToTable("ProblemTagMappings");
                });

            modelBuilder.Entity("FSADProjectBackend.Models.Tag", b =>
                {
                    b.Property<string>("Id")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.HasKey("Id");

                    b.ToTable("Tags");
                });

            modelBuilder.Entity("FSADProjectBackend.Models.UserProblemCommentVoteMapping", b =>
                {
                    b.Property<string>("UserSubject")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.Property<string>("ProblemId")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.Property<string>("CommentId")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.Property<bool>("IsUpvote")
                        .HasColumnType("boolean");

                    b.HasKey("UserSubject", "ProblemId", "CommentId");

                    b.ToTable("UserCommentVoteMappings");
                });

            modelBuilder.Entity("FSADProjectBackend.Models.UserProblemSolverMapping", b =>
                {
                    b.Property<string>("ProblemSolverId")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.Property<string>("UserSubject")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.Property<DateTime>("InvitedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<DateTime?>("JoinedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<int>("Role")
                        .HasColumnType("integer");

                    b.HasKey("ProblemSolverId", "UserSubject");

                    b.ToTable("UserProblemSolverMappings");
                });

            modelBuilder.Entity("FSADProjectBackend.Models.UserProblemVoteMapping", b =>
                {
                    b.Property<string>("UserSubject")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.Property<string>("ProblemId")
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)");

                    b.Property<bool>("IsUpvote")
                        .HasColumnType("boolean");

                    b.HasKey("UserSubject", "ProblemId");

                    b.ToTable("UserProblemVoteMappings");
                });

            modelBuilder.Entity("FSADProjectBackend.Models.Contact", b =>
                {
                    b.HasOne("FSADProjectBackend.Models.ProblemSolver", null)
                        .WithOne("Contact")
                        .HasForeignKey("FSADProjectBackend.Models.Contact", "ProblemSolverId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("FSADProjectBackend.Models.ProblemTagMapping", b =>
                {
                    b.HasOne("FSADProjectBackend.Models.Tag", "Tag")
                        .WithMany("ProblemTagMappings")
                        .HasForeignKey("TagId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Tag");
                });

            modelBuilder.Entity("FSADProjectBackend.Models.UserProblemSolverMapping", b =>
                {
                    b.HasOne("FSADProjectBackend.Models.ProblemSolver", "ProblemSolver")
                        .WithMany("MembersMapping")
                        .HasForeignKey("ProblemSolverId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("ProblemSolver");
                });

            modelBuilder.Entity("FSADProjectBackend.Models.ProblemSolver", b =>
                {
                    b.Navigation("Contact");

                    b.Navigation("MembersMapping");
                });

            modelBuilder.Entity("FSADProjectBackend.Models.Tag", b =>
                {
                    b.Navigation("ProblemTagMappings");
                });
#pragma warning restore 612, 618
        }
    }
}
