namespace FSADProjectBackend.Models;

public class ProjectProgressUpdate
{
}