namespace FSADProjectBackend.Models;

public class User
{
    public required string Id { get; set; } 
    public required string Name { get; set; }
}